src/objects/Region__c/Region__c.object-meta.xml
<CustomObject>
    <description>CVMA Regional organizational structure per National Bylaws Article VII. Manages Region Representatives and multi-state oversight capabilities for chain of command compliance.</description>
    <label>CVMA Region</label>
    <nameField>
        <displayFormat>RGN-{0000}</displayFormat>
        <label>Region Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVMA Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>