src/objects/Region__c/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this CVMA Region is currently active in the organizational structure</description>
    <inlineHelpText>Uncheck if this Region is temporarily inactive or has been reorganized per National Board decisions</inlineHelpText>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>