src/objects/Region__c/fields/Established_Date__c.field-meta.xml
<CustomField>
    <fullName>Established_Date__c</fullName>
    <description>Date this CVMA Region was officially established by National Board</description>
    <inlineHelpText>Enter the date this Region was officially created per National Board authorization</inlineHelpText>
    <label>Established Date</label>
    <type>Date</type>
</CustomField>