src/objects/Region__c/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <description>Official name of the CVMA Region per National Bylaws Article VII organizational structure</description>
    <inlineHelpText>Enter the official CVMA Region name (e.g., "Northeast Region", "Southeast Region", "Midwest Region")</inlineHelpText>
    <label>Region Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>