src/objects/Region__c/fields/Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Region_Number__c</fullName>
    <description>Numeric identifier for the CVMA Region per National organizational chart</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the official CVMA Region number (1-10 based on National structure)</inlineHelpText>
    <label>Region Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>