src/objects/Region__c/fields/Region_Representative__c.field-meta.xml
<CustomField>
    <fullName>Region_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CVMA Region Representative contact per National Bylaws Article VII.03 - oversees State Representatives within region</description>
    <inlineHelpText>Select the CVMA member serving as Region Representative for this region</inlineHelpText>
    <label>Region Representative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Level__c</field>
            <operation>equals</operation>
            <value>Full Member</value>
        </filterItems>
        <infoMessage>Only Full Members can serve as Region Representatives per National Bylaws</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CVMA Regions (Representative)</relationshipLabel>
    <relationshipName>CVMA_Regions_Representative</relationshipName>
    <type>Lookup</type>
</CustomField>